[gd_scene load_steps=5 format=3 uid="uid://dam223tnnmi0k"]

[ext_resource type="Texture2D" uid="uid://ckwldj388wihx" path="res://icon.svg" id="1_ro2ow"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_shhsg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jpwut"]
size = Vector2(52, 98)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_be2i8"]
size = Vector2(20, 99)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_shhsg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3.8147e-06, -49)
scale = Vector2(0.40625, 0.765625)
texture = ExtResource("1_ro2ow")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -49)
shape = SubResource("RectangleShape2D_jpwut")

[node name="Droite" type="Area2D" parent="."]
position = Vector2(37, -49)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Droite"]
shape = SubResource("RectangleShape2D_be2i8")

[node name="ListeSpawnPos" type="Node2D" parent="."]

[node name="RightSpawn" type="Marker2D" parent="ListeSpawnPos"]
position = Vector2(64, -48)

[node name="LeftSpawn" type="Marker2D" parent="ListeSpawnPos"]
position = Vector2(-54, -49)

[connection signal="body_entered" from="Droite" to="." method="_on_droite_body_entered"]
[connection signal="body_exited" from="Droite" to="." method="_on_droite_body_exited"]
